# ResourceEmbedder

./: Binary.cpp  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
Examples/: CMakeLists.txt
Examples/Directory/: CMakeLists.txt  main.cpp
Examples/Named/: CMakeLists.txt  Main.cpp
Examples/SharedLib/: CMakeLists.txt  Lib.cpp  Lib.h  Main.cpp  MissingResourcesMain.cpp
Examples/SharedLib/ResourcesA/: Text.txt
Examples/SharedLib/ResourcesB/: Text.txt
GeneratedCodeTest/: CMakeLists.txt  Main.cpp  Resource.c  ResourceData.cpp  ResourceData.h
Generator/: CMakeLists.txt  ResourceGenerator.cpp
Lib/: CMakeLists.txt  ResourceEmbedLib.cpp  ResourceEmbedLib.h
Lib/ResEmbed/: ResEmbed.h
Test/: CMakeLists.txt  main.cpp
Test/Resources/: SRC-ND_INST-Clap_NAME-Shlap!.flac  data2.txt
Tests/BasicUse/: main.cpp
Tests/BasicUse/Resources/: data2.txt
cmake/: ResEmbed.cmake  ResourceEmbed.cmake
